# pydantic-settings

./: .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  AGENTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirement.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.ship/: ship.policy.json
docs/: index.md
docs/examples/: settings_add_custom_source.py  settings_case_sensitive.py  settings_disable_source.py  settings_env_priority.py  settings_main.py  settings_nested_env.py  settings_with_custom_parsing.py
pydantic_settings/: __init__.py  exceptions.py  main.py  mapper.py  settings.py  source_mappers.py  source_providers.py  sources.py  utils.py  version.py
pydantic_settings/sources/: __init__.py  base.py  lazy.py  types.py  utils.py
pydantic_settings/sources/providers/: __init__.py  aws.py  azure.py  cli.py  dotenv.py  env.py  gcp.py  json.py  keyring.py  loadcredential.py  nested_secrets.py  pyproject.py  secrets.py  toml.py  yaml.py
requirements/: all.txt  docs.in  docs.txt  linting.in  linting.txt  pyproject.txt  testing.in  testing.txt
tests/: conftest.py  test_config_file_deep_merge.py  test_docs.py  test_env_source.py  test_lazy_mapping.py  test_multi_source.py  test_precedence_and_merging.py  test_settings.py  test_settings_py312.py  test_source_aws_secrets_manager.py  test_source_azure_key_vault.py  test_source_cli.py  test_source_gcp_secret_manager.py  test_source_json.py  test_source_keyring.py  test_source_nested_secrets.py  test_source_pyproject_toml.py  test_source_toml.py  test_source_yaml.py  test_sources.py
